@@ -1,3 +1,7 @@
+2013-07-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* eword-encode.el: Check whether the mule-vesion variable is defined.
+
 2013-06-26  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mailcap.el: Removed to resolve compatibility problem when run in
